# python-hobby-programming

./: .gitignore  README.md  api.py  game.py  main.py  pyproject.toml  requirements.txt  test_game.py
hello/: api.py  game.py
hello_python/: game.py  main.py
tests/: test_hello_python_game.py
tests/hello/: test_game.py
