[tool.poetry]
name = "hello-python"
version = "0.1.0"
description = ""
authors = ["Hisateru Tanaka <tanakahisateru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyxel = "^1.9.18"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
